# garyx

./: .gitignore  .impeccable.md  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF-workspace-s4.md  LICENSE  README.md  TODO.md  install.sh
antigravity-sdk/: Cargo.toml
antigravity-sdk/src/: client.rs  discovery.rs  error.rs  lib.rs  transcript.rs  types.rs
antigravity-sdk/tests/: integration.rs
claude-agent-sdk/: Cargo.toml
claude-agent-sdk/examples/: session_store_batch_probe.rs  session_store_contract.rs  session_store_resume_probe.rs
claude-agent-sdk/src/: client.rs  control.rs  error.rs  lib.rs  parse.rs  run_streaming.rs  session_store.rs  transport.rs  types.rs
claude-agent-sdk/src/client/: tests.rs
claude-agent-sdk/src/control/: tests.rs
claude-agent-sdk/src/parse/: tests.rs
claude-agent-sdk/src/run_streaming/: tests.rs
claude-agent-sdk/src/transport/: tests.rs
claude-agent-sdk/src/types/: tests.rs
claude-agent-sdk/tests/: integration.rs  session_store_typescript_parity.test.ts
claude-agent-sdk/tests/fixtures/: session_mirror_fake_cli.mjs
codex-sdk/: Cargo.toml
codex-sdk/src/: approval.rs  client.rs  error.rs  lib.rs  transport.rs  types.rs
codex-sdk/src/approval/: tests.rs
codex-sdk/src/client/: tests.rs
codex-sdk/src/transport/: tests.rs
codex-sdk/src/types/: tests.rs
codex-sdk/tests/: integration.rs
garyx/: Cargo.toml
garyx-agent-loop/: Cargo.toml
garyx-agent-loop/src/: compaction.rs  lib.rs  message.rs
garyx-agent-loop/src/adapters/: anthropic.rs  google.rs  openai.rs
garyx-bridge/: Cargo.toml
garyx-bridge/src/: antigravity_provider.rs  api_guard_tests.rs  auto_memory.rs  claude_provider.rs  claude_tty_provider.rs  codex_provider.rs  gary_prompt.rs  garyx_native_provider.rs  gemini_provider.rs  graph_engine.rs  grok_provider.rs  lib.rs  memory_context.rs  multi_provider.rs  native_capabilities.rs  native_slash.rs  opencode_provider.rs  provider_common.rs  provider_trait.rs  run_graph.rs
garyx-bridge/src/auto_memory/: tests.rs
garyx-bridge/src/claude_provider/: tests.rs
garyx-bridge/src/codex_provider/: tests.rs
garyx-bridge/src/gary_prompt/: tests.rs
garyx-bridge/src/garyx_native_provider/: tests.rs
garyx-bridge/src/gemini_provider/: tests.rs
garyx-bridge/src/graph_engine/: tests.rs
garyx-bridge/src/memory_context/: tests.rs
garyx-bridge/src/multi_provider/: lifecycle.rs  persistence.rs  provider_factory.rs  resolver.rs  run_management.rs  state.rs  tests.rs  topology.rs
garyx-bridge/src/native_slash/: tests.rs
garyx-bridge/src/provider_trait/: tests.rs
garyx-bridge/src/run_graph/: tests.rs
garyx-bridge/tests/: cctty_cleanup.rs  claude_provider_compare_live.rs  claude_tty_live.rs  integration.rs
garyx-channels/: Cargo.toml
garyx-channels/proptest-regressions/: telegram.txt
garyx-channels/src/: auth_flow.rs  bound_fanout.rs  builtin_catalog.rs  channel_trait.rs  committed_replay.rs  discord.rs  dispatcher.rs  feishu.rs  generated_images.rs  inbound.rs  lib.rs  meeting_sink.rs  outbound_registry.rs  plugin.rs  plugin_tools.rs  streaming_core.rs  telegram.rs  test_helpers.rs  weixin.rs  weixin_auth.rs  weixin_auth_executor.rs
garyx-channels/src/auth_flow/: tests.rs
garyx-channels/src/discord/: inbound.rs  media.rs  outbound.rs  protocol.rs  streaming.rs  tests.rs
garyx-channels/src/dispatcher/: characterization.rs  tests.rs
garyx-channels/src/feishu/: auth_flow_executor.rs  client.rs  cot.rs  cot_render.rs  device_auth.rs  ws.rs  (+7 more)
garyx-channels/tests/: discord_public_api.rs  feishu_auth_flow_diff.rs  preflight_contract.rs  respawn_contract.rs  weixin_auth_flow_diff.rs  weixin_public_api.rs
garyx-core/: Cargo.toml
garyx-core/src/: keys.rs  label.rs  lib.rs  route_resolver.rs  slash_commands.rs
garyx-gateway/: Cargo.toml  build.rs
garyx-gateway/src/: agent_identity.rs  agent_team_provider.rs  agent_teams.rs  api.rs  app_db.rs  app_state_tests.rs  atomic_write.rs  auto_research.rs  automation.rs  capsules.rs  channel_catalog.rs  chat.rs  chat_tests.rs  claude_oauth.rs  coding_usage.rs  commands.rs  conversation_admission.rs  create_dispatch.rs  create_resources.rs  cron.rs  custom_agents.rs  dashboard.rs  delivery_target.rs  downstream_real_tests.rs  dream_scheduler.rs  dreams.rs  endpoint_binding_mutator.rs  endpoint_projection.rs  garyx_db.rs  gateway_auth.rs  health.rs  heartbeat.rs  internal_inbound.rs  legacy_boot_import.rs  lib.rs  loop_continuation.rs  managed_mcp_metadata.rs  managed_mcp_real_tests.rs  mcp.rs  mcp_config.rs  (+40 more)
garyx-gateway/tests/: automation_public_api.rs  channel_real_calls.rs  chat_ws.rs  commands_api.rs  mcp_servers_api.rs  skills_api.rs  stream_sync_fixtures.rs
garyx-models/: Cargo.toml
garyx-models/src/: agent.rs  agent_availability.rs  agent_node.rs  agent_reference.rs  agent_store.rs  agent_team.rs  auto_research.rs  channel_outbound.rs  codex_models.rs  command_catalog.rs  config.rs  config_loader.rs  custom_agent.rs  debug_runtime.rs  execution.rs  lib.rs  local_paths.rs  message_lifecycle.rs  message_preview.rs  messages.rs  provider.rs  quota.rs  routing.rs  session.rs  task.rs  thread_logs.rs  thread_record.rs  threading.rs  tool_field_projection.rs  transcript_kind.rs  transcript_render_state.rs  transcript_run_state.rs  wiki.rs
garyx-models/tests/: agent_node_protocol.rs  transcript_tool_group_adjacency_repro.rs
garyx-router/: Cargo.toml
garyx-router/src/: conversation_index.rs  endpoint_binding.rs  endpoint_projection.rs  file_store.rs  group_transcript.rs  lib.rs  memory_store.rs  message_ledger.rs  message_routing.rs  recent_threads.rs  run_admission.rs  runtime_context.rs  scrub.rs  store.rs  task_counter.rs  tasks.rs  test_seams.rs  thread_history.rs  threads.rs  worktree.rs
garyx/src/: auto_update_common.rs  channel_plugin_host.rs  cli.rs  commands.rs  config_support.rs  gateway_auto_update.rs  gateway_runtime.rs  main.rs  main_tests.rs  plugin_self_replace.rs  plugins_cli.rs  runtime_assembler.rs
garyx/tests/: gateway_data_dir_lock.rs  task_quota_cli.rs
grok-agent-sdk/: Cargo.toml
grok-agent-sdk/src/: lib.rs
(+1656 files in other folders)
