[workspace]
members = [
    "garyx-models",
    "garyx-core",
    "garyx-router",
    "garyx-bridge",
    "garyx-channels",
    "garyx-gateway",
    "garyx",
    "antigravity-sdk",
    "codex-sdk",
    "claude-agent-sdk",
    "grok-agent-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.32"
edition = "2024"
license = "MIT"
repository = "https://github.com/Pyiner/garyx"
homepage = "https://github.com/Pyiner/garyx"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "chrono"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
qrcode = { version = "0.14", default-features = false }

# Channels
teloxide = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Internal crates
antigravity-sdk = { path = "antigravity-sdk" }
claude-agent-sdk = { path = "claude-agent-sdk" }
codex-sdk = { path = "codex-sdk" }
grok-agent-sdk = { path = "grok-agent-sdk" }
cctty = { git = "https://github.com/Pyiner/cctty.git", rev = "04c9b6c16c009f831bca826927c5c5b075513fe7" }
garyx-models = { path = "garyx-models" }
garyx-core = { path = "garyx-core" }
garyx-router = { path = "garyx-router" }
garyx-bridge = { path = "garyx-bridge" }
garyx-channels = { path = "garyx-channels" }
garyx-gateway = { path = "garyx-gateway" }

# Dev
proptest = "1"
tempfile = "3"
filetime = "0.2"

# ---------------------------------------------------------------------------
# Release profile tuning. `strip` drops symbol tables, while `opt-level = "s"`
# keeps the release binary compact without pushing build time into heavy LTO
# territory.
# ---------------------------------------------------------------------------
[profile.release]
strip = "symbols"
opt-level = "s"
