[package]
name = "garyx-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider adapters for the garyx AI chat gateway"

[dependencies]
antigravity-sdk = { workspace = true }
garyx-models = { workspace = true }
garyx-router = { workspace = true }
claude-agent-sdk = { workspace = true }
codex-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
shellexpand = "3"
urlencoding = "2"
chrono = { workspace = true }
iana-time-zone = { workspace = true }
regex = { workspace = true }
toml = "0.8"
reqwest = { workspace = true }

[dev-dependencies]
# `test-seams` unlocks the shared writer-contract spy store
# (garyx_router::test_seams) for unit tests; production builds never see it.
garyx-router = { workspace = true, features = ["test-seams"] }
chrono-tz = "0.10"
tempfile = { workspace = true }
filetime = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
