[package]
name = "garyx-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core data models (threads, messages, configs) for the garyx AI chat gateway"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
