[package]
name = "garyx-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Message routing and thread-dispatch layer for the garyx AI chat gateway"

[dependencies]
garyx-models = { workspace = true }
garyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"

[features]
# Test-only seams: unlocks ChannelBindingsMergeAuthority::test_authority for
# fixtures that inject binding state without being an endpoint-binding
# mutator. Enable from [dev-dependencies] only.
test-seams = []

[dev-dependencies]
tempfile = { workspace = true }
